# ai-audio

./: .env.example  .gitignore  README.md  pyproject.toml
src/ai_audio/: __init__.py  __main__.py  config.py  controller.py
src/ai_audio/audio/: recorder.py
src/ai_audio/desktop/: clipboard.py  macos.py  notifications.py
src/ai_audio/gui/: compact_window.py  main_window.py
src/ai_audio/hotkey/: listener.py
src/ai_audio/llm/: gemini_client.py  prompts.py
src/ai_audio/storage/: sessions.py
src/ai_audio/stt/: groq_client.py
