[project]
name = "ai-audio"
version = "0.1.0"
description = "Voice-input transcription tool for meeting scripts (Groq Whisper + Gemini Flash-Lite)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "yuyayoshiok" }]
dependencies = [
    "groq>=0.13.0",
    "google-genai>=0.3.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pynput>=1.7.7",
    "pystray>=0.19.5",
    "Pillow>=11.0.0",
    "pyperclip>=1.9.0",
    "keyring>=25.5.0",
    "tomli-w>=1.0.0",
    "plyer>=2.1.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8",
]
gui = [
    "customtkinter>=5.2.0",
]

[project.scripts]
ai-audio = "ai_audio.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_audio"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
